# gemmis

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  check_syntax.py  pyproject.toml  run.sh  run_gemmis.sh  setup.py  test_ansi_fix.py  test_boxes.py
.Jules/: palette.md
gemmis/: __init__.py  __main__.py  app.py  audio.py  brain.py  cli.py  commands.py  config.py  ollama_client.py  personas.py  state.py  system_monitor.py  tools.py  wizard.py
gemmis/memory/: __init__.py  base.py  session.py  store.py  vectors.py
gemmis/tools/: __init__.py  docker_ops.py  git_ops.py
gemmis/ui/: __init__.py  boot.py  boxes.py  chat.py  css.py  dashboard.py  effects.py  input.py  panels.py  theme.py
gemmis/ui/widgets/: __init__.py  avatar.py  avatar_assets.py  chat.py  dashboard.py  docker.py  gpu.py  inference.py  matrix.py  palette.py  particles.py  scanline.py  sidebar.py
tests/: __init__.py  conftest.py  test_cli.py  test_personas.py  test_state.py  test_themes.py
tests/snapshots/: test_dashboard_empty.py  test_sidebar_layout.py
tests/snapshots/snapshots/test_dashboard_empty/test_dashboard_snapshot/: dashboard_empty.txt
tests/snapshots/snapshots/test_sidebar_layout/test_sidebar_snapshot/: sidebar_layout.txt
