[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemmis-cli"
version = "2.1.0"
description = "GEMMIS CLI - Neural Interface Terminal for local LLM chat via Ollama"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["cli", "llm", "ollama", "ai", "terminal", "chat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
]
dependencies = [
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "psutil>=5.9.0",
    "typer[all]>=0.9.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
memory = [
    "chromadb>=0.4.0",
]
tokens = [
    "tiktoken>=0.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
all = ["gemmis-cli[rag,tokens,dev]"]

[project.scripts]
gemmis = "gemmis.cli:app"

[project.urls]
Homepage = "https://github.com/gemmis/gemmis-cli"
Documentation = "https://github.com/gemmis/gemmis-cli#readme"
Repository = "https://github.com/gemmis/gemmis-cli"
Changelog = "https://github.com/gemmis/gemmis-cli/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = {find = {}}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["gemmis"]
omit = ["gemmis/ui/boot.py"]
